added more examples for events and dom

--- a/20-html/events/index.html
+++ b/20-html/events/index.html
@@ -13,5 +13,16 @@
         <p>paragraph</p>
       </div>
     </form>
+    <label
+      >Choose an ice cream flavor:
+      <select class="ice-cream" name="ice-cream">
+        <option value="">Select One …</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="sardine">Sardine</option>
+        <option value="vanilla">Vanilla</option>
+      </select>
+    </label>
+
+    <div class="result"></div>
   </body>
 </html>
